--- a/.x84/default.ini
+++ b/.x84/default.ini
@@ -14,9 +14,6 @@ show_traceback = yes
 pass_ucase = no
 art_utf8_codec = cp437
 
-[euphoria]
-enabled = yes
-
 [telnet]
 enabled = yes
 addr = 127.0.0.1
@@ -35,7 +32,7 @@ root = /Users/ispyhumanfly/x84-sftp_root
 uploads_filemode = 6644
 
 [rlogin]
-enabled = yes
+enabled = no
 addr = 127.0.0.1
 port = 6513
 
@@ -53,7 +50,7 @@ path = /usr/local/bin:/usr/games
 [matrix]
 newcmds = new, apply
 byecmds = exit, logoff, bye, quit
-anoncmds = anonymous
+anoncmds = anonymous, guest
 script = matrix
 script_telnet = matrix
 script_ssh = matrix_ssh
