Updated my email addie in default.ini.

--- a/.x84/default.ini
+++ b/.x84/default.ini
@@ -6,7 +6,7 @@ scriptpath = dark
 datapath = .x84/data
 timeout = 1984
 password_digest = bcrypt
-mail_addr = ispyhumanfly@Dan-9.hsd1.mi.comcast.net
+mail_addr = ispyhumanfly@gmail.com
 mail_smtphost = localhost
 termcap-ansi = ansi
 termcap-unknown = ansi
