Fixed issue with logging.ini.

--- a/.x84/logging.ini
+++ b/.x84/logging.ini
@@ -20,7 +20,7 @@ level = INFO
 suffix = %Y%m%d
 encoding = utf8
 formatter = default
-args = ("/Users/ispyhumanfly/.x84/daily.log", "midnight", 1, 60)
+args = (".x84/daily.log", "midnight", 1, 60)
 
 [loggers]
 keys = root, sqlitedict, paramiko, xmodem, requests, irc
