Fixed issue with logging.ini.

--- a/.x84/default.ini
+++ b/.x84/default.ini
@@ -2,7 +2,7 @@
 bbsname = euphoria
 sysop = ispyhumanfly
 software = x/84
-scriptpath = dark
+scriptpath = ~/dark
 datapath = .x84/data
 timeout = 1984
 password_digest = bcrypt
