Fixed a scriptpath issue.

--- a/.x84/default.ini
+++ b/.x84/default.ini
@@ -2,7 +2,7 @@
 bbsname = euphoria
 sysop = ispyhumanfly
 software = x/84
-scriptpath = /root/dark
+scriptpath = ./bbs
 datapath = .x84/data
 timeout = 1984
 password_digest = bcrypt
@@ -17,7 +17,7 @@ art_utf8_codec = cp437
 [telnet]
 enabled = yes
 addr = 0.0.0.0
-port = 23
+port = 6023
 
 [ssh]
 enabled = yes
